kubernetes/services/linkwarden/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkwarden
  labels:
    app: linkwarden
    type: productivity
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
